# Automotive-Project

./: .gitignore  README.md
SpaceCar/: AccelerationGauge.qml  BrakePedal.qml  CMakeLists.txt  GasPedal.qml  InfoScreen.qml  LoopingImage.qml  PitchGauge.qml  PitchStick.qml  PowerButton.qml  SteeringWheel.qml  YawGauge.qml  carcontrol.cpp  carcontrol.h  main.cpp  main.qml
SpaceCar/include/: carcontrol.h
SpaceCar/src/: carcontrol.cpp  main.cpp
code/testing/: CMakeLists.txt  LoopingImage.qml  main.cpp  main.qml
documentation/: backlog.ods  koodikommentit.txt
